# qcolorpicker

./: CMakeLists.txt  readme.md
ci/scripts/: report_coverage.sh
include/: CMakeLists.txt
include/qcolorpicker/: qcolorpicker.hpp
sample/: CMakeLists.txt  sample.cpp
src/: CMakeLists.txt  qcolorpicker.cpp  qcolorpicker_slider.cpp  qcolorpicker_slider.hpp
test/: CMakeLists.txt  test_qcolorpicker.cpp
